--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -25,6 +25,27 @@
     @apply px-[60px] py-10 bg-white rounded-lg;
 }
 
+::-webkit-scrollbar {
+    width: 5px;
+    height: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+    background: #888;
+    border-radius: 5px;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+    background: #000;
+    border-radius: 5px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+    background: #555;
+}
 body {
     margin: 0;
 }
